Updated input to prevent jump to top (#29)

--- a/DFC.Digital/DFC.Digital.Web.Sitefinity/ResourcePackages/gds_toolkit/assets/src/frontend/sass/includes/_filters.scss
+++ b/DFC.Digital/DFC.Digital.Web.Sitefinity/ResourcePackages/gds_toolkit/assets/src/frontend/sass/includes/_filters.scss
@@ -20,7 +20,9 @@
             display: block;
             height: 0;
             width: 0;
-            position: absolute;
+            position: relative;
+            visibility: hidden;
+            margin: 0;
             outline: none !important;
 
             & + input + label, & + label {
